# projeto-novo

./: .env.example  .env.exemplo  .gitignore  AUTHENTICATION.md  CHANGELOG.md  COMECE_AQUI.md  CONTRIBUTING.md  COPILOT_CHECK.md  COPILOT_CHECK_INSTRUCTIONS.md  COPILOT_TROUBLESHOOTING.md  DATA_FORMAT.md  Dockerfile  ESTRUTURA_PACOTE.md  GETTING_STARTED.md  GUIA_RAPIDO_COPILOT.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INICIO_RAPIDO.md  LICENSE  Makefile  PACKAGE_TREE.txt  PROJECT_OVERVIEW.md  PROJETO_RESUMO.md  QUICKSTART.md  README.md  README_CI.md  README_PACOTE.md  README_pipeline.md  RESUMO_ENTREGA.md  SUMMARY.md  TUTORIAL.md  USAGE_SUMMARY.md  VERIFICACAO_COPILOT.md  aula01_saneamento_base.py  aula02_coleta_tjsp.py  auth.py  check_copilot_extensions.ps1  check_copilot_extensions.py  check_copilot_extensions.sh  classification_report.txt  (+25 more)
.github/workflows/: README.md  ci-minimal.yml  docker-publish.yml  noop-test.yml  smoke.yml  (+1 more)
coleta_judicial/: README.md  __init__.py  base_scraper.py  config.py  data_exporter.py  examples.py  main_collector.py  tjsp_scraper.py
data/: dados.csv  template_dados.xlsx
docs/: integracao_datajud.md
notebooks/: 01_analise_exploratoria.ipynb  exemplo_workflow.ipynb
outputs/: modelo_respostas.xlsx
projeto/: token
scripts/: auto_fill_pilot.py  auto_fill_pilot_advanced.py  generate_modelo_respostas.py
starter_scripts/: 01_pipeline_responder_14_questoes.py  02_inspect_flags.py  __init__.py
tests/: test_auto_fill_heuristics.py  test_cnj_validation.py  test_generate_modelo.py  test_heuristics_advanced.py  test_pipeline_utils.py
(+1 files in other folders)
