[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "projeto-novo"
version = "0.1.0"
description = "Jurimetrics analysis and reporting tool"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Joicerss"}
]
dependencies = [
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
generate-report = "generate_report_complete:main"
